Add start script to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "Auth.js",
   "scripts": {
-    "AuthDev": "nodemon Auth.js"
+    "AuthDev": "nodemon Auth.js",
+    "start": "node Auth.js"
   },
   "keywords": [],
   "author": "",
